# AsteroCat

./: .gitignore  README.md  asterocat.py  build_db.py  catalog.db  compile_hatt2023.py  make_demo_data.py  overrides.csv  pyproject.toml
asterocat/: __init__.py  app.py  utils.py
asterocat/static/: index.html
scripts/: build_db.py  compile_all.py  compile_hatt2023.py  compile_hon2021.py  compile_hon2022.py  compile_karim2025.py  compile_liagre2025.py  compile_lund2024.py  compile_lund2025.py  compile_sayeed2024.py  compile_sreenivas2026.py  compile_yu2018.py  make_demo_data.py  parse_build_log.py
sources/: hatt2023.json  karim2025.json  liagre2025.json  lund2024.json  lund2025.json  sayeed2024.json  sreenivas2026.json
sources/hatt2023/: ReadMe.txt
sources/hon2021/: ReadMe.txt
sources/hon2022/: ReadMe.txt
sources/karim2025/: karim2025.txt
sources/liagre2025/: ReadMe.txt
sources/lund2024/: lund_keystone.csv
sources/lund2025/: lund_luminaries.csv
sources/sayeed2024/: sayeed_seismic_table.txt  sayeed_stellar_pars_table.txt
static/: index.html
